feat(auth): add student registration status check api
